<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/create_data_base_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_data_base" />

    <Button
        android:id="@+id/add_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_data_base_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/update_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_data_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/update_data" />

    <Button
        android:id="@+id/delete_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_data_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_data" />
    
    <Button
        android:id="@+id/query_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete_data_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/query_data" />
    

</RelativeLayout>